# hetzner-mcp

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  npm-publish.yml  publish.yml  quality-gates.yml
implementation-tasks/: 00_INDEX.md  01_PROGRAM_RULES_AND_SCOPE.md  02_PHASED_EXECUTION_PLAN.md  03_COMPONENT_TASK_BREAKDOWN.md  04_OPERATION_IMPLEMENTATION_PLAYBOOK.md  05_OPERATION_CHECKLIST_ALL_221.md  06_TEST_MATRIX_AND_ACCEPTANCE.md  07_COMMIT_PLAN_GRANULAR.md  08_RISKS_EDGE_CASES_AND_MITIGATIONS.md  09_README_DESIGN_SPEC.md
scripts/: sync_specs.py  verify_operation_coverage.py
src/hetzner_mcp/: __init__.py  __main__.py  capabilities.py  cli.py  config.py  errors.py  http_client.py  install.py  models.py  registry.py  request_builder.py  server.py  specs.py  uninstall.py
tests/: test_capabilities.py  test_cli.py  test_config.py  test_install.py  test_registry.py  test_request_builder.py  test_server_tools.py
