[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "hetzner-mcp"
version = "0.1.5"
description = "Model Context Protocol server for the full Hetzner Cloud and Storage APIs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Hetzner MCP Contributors" }]
keywords = [
  "mcp",
  "hetzner",
  "cloud",
  "storage-box",
  "api",
  "automation",
  "agent",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "mcp>=1.7.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
hetzner-mcp = "hetzner_mcp.cli:main"
hetzner-mcp-server = "hetzner_mcp.server:main"
hetzner-mcp-install = "hetzner_mcp.install:main"
hetzner-mcp-uninstall = "hetzner_mcp.uninstall:main"

[project.entry-points."mcp.server"]
hetzner-mcp = "hetzner_mcp.server:main"

[project.urls]
Homepage = "https://github.com/devinoldenburg/hetzner-mcp"
Repository = "https://github.com/devinoldenburg/hetzner-mcp"
Issues = "https://github.com/devinoldenburg/hetzner-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hetzner_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q", "--color=yes"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
